<resources>
    <string name="app_name">BakedEggs</string>

    <string name="main_gridviewbtn">GridView</string>
    <string name="main_listviewbtn">ListView</string>
    <string name="main_contactbtn">contact</string>
    <string name="main_mypagebtn">mypage</string>

    <!-- MainPage -->

    <!-- DetailPage -->

    <!-- ListFragment -->

    <string name="list_card">내 카드</string>


    <!-- AddFragment -->
    <string name="add_name">이름</string>
    <string name="add_phone">번호</string>
    <string name="add_email">이메일</string>
    <string name="add_birthday">생일</string>
    <string name="add_SNSadd">SNS 계정 추가</string>
    <string name="add_save">저장</string>
    <string name="main_tabs_contact">CONTACT</string>
    <string name="main_tabs_mypage">MYPAGE</string>

    <!-- MypageFragment -->

</resources>